# mathphysicslib

./: .gitignore  LICENSE  README.md  pyproject.toml
mathPhysicsLib/: __init__.py  ast_parser.py  core.py  expresso.py  rules.py
tests/: test_core.py  test_expresso.py
