[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathPhysicsLib"
version = "0.1.0"
description = """A math and physics helper library for people interested in Calculus, Differential Equations and 
Classical Mechanics (for now). This library will be updated as I learn more from my courses. This is made because I want some actual coding experience."""

authors = [
  { name="Le Minh Ngoc", email="leminhngoc3669420@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  # Add runtime dependencies here, e.g. "numpy>=1.21"
]

[project.urls]
Homepage = "https://github.com/starfruit36/mathphysicslib"